--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,72 @@
 body {
     background: rgba(230, 214, 198, 0.49);
-}
-h1 {
     font-family: "Noto Serif", serif;
-    font-weight: 800;
-    font-size: 34px;
-    line-height: 1.5;
+}
+
+header {
+    margin-bottom: 30px;
 }
 
 .container {
     margin: 100px auto;
     max-width: 600px;
+}
+
+h1 {
+    font-weight: 800;
+    font-size: 34px;
+    line-height: 1.5;
+    text-align: center;
+}
+
+main {
+    margin-bottom: 30px;
+}
+
+form {
+    padding: 30px;
+    background: rgba(230, 214, 198, 0.49);    border-radius: 10px;
+    display: flex;
+    margin-bottom: 30px;
+    box-shadow: rgba(230, 214, 198, 0.08);
+}
+
+.instructions {
+    padding: 16px;
+    width: 80%;
+    font-size: 16px;
+    line-height: 20px;
+    border-radius: 10px;
+    background: rgba(205, 186, 166, 0.233);    
+    border: none;
+}
+
+.button {
+    border-radius: 10px;
+    margin-left: 10px;
+    background: rgba(205, 186, 166, 0.49);
+    color: rgba(104, 86, 67, 0.877);
+    border: none;
+    font-size: 16px;
+    width: 150px;
+    box-shadow: rgba(138, 122, 105, 0.49);
+}
+
+.poem {
+    font-size: 16px;
+    line-height: 2;
+    background: rgba(230, 214, 198, 0.49);
+    padding: 16px;
+    border-radius: 10px;  
+    box-shadow: rgba(230, 214, 198, 0.08);
+
+}
+
+footer {
+    text-align: center;
+    font-size: 13px;
+}
+
+a {
+        color: rgba(104, 86, 67, 0.877);
 }
