--- a/src/style.css
+++ b/src/style.css
@@ -62,6 +62,12 @@ form {
 
 }
 
+.poem strong {
+    display: block;
+    text-align: right;
+    color: rgba(205, 186, 166, 0.49);;
+}
+
 footer {
     text-align: center;
     font-size: 13px;
