--- a/src/style.css
+++ b/src/style.css
@@ -23,14 +23,25 @@ main {
     margin-bottom: 30px;
 }
 
-form {
+.form-container {
     padding: 30px;
-    background: rgba(230, 214, 198, 0.49);    border-radius: 10px;
-    display: flex;
+    background: rgba(230, 214, 198, 0.49);
+    border-radius: 10px;
     margin-bottom: 30px;
     box-shadow: rgba(230, 214, 198, 0.08);
 }
 
+form {
+    display: flex; 
+}
+
+.hint {
+    line-height: 1.5;
+    margin-top: 5px;
+    opacity: 0.6;
+    font-size: 12px;
+    color: rgba(104, 86, 67, 0.877);
+}
 .instructions {
     padding: 16px;
     width: 80%;
@@ -53,6 +64,7 @@ form {
 }
 
 .poem {
+    margin-top: 30px;
     font-size: 16px;
     line-height: 2;
     background: rgba(230, 214, 198, 0.49);
@@ -62,10 +74,14 @@ form {
 
 }
 
+.hidden {
+    display: none;
+}
 .poem strong {
     display: block;
     text-align: right;
-    color: rgba(205, 186, 166, 0.49);;
+    color: rgba(205, 186, 166, 0.49);
+
 }
 
 footer {
@@ -75,4 +91,20 @@ footer {
 
 a {
         color: rgba(104, 86, 67, 0.877);
+}
+
+.loading {
+    animation: blink-animation 1s steps(5, start) infinite;
+}
+
+@keyframes blink-animation {
+    to {
+        visibility: hidden;
+    }
+}
+
+@-webkit-keyframes blink-animation {
+    to {
+        visibility: hidden;
+    }
 }
