--- a/src/style.css
+++ b/src/style.css
@@ -60,8 +60,11 @@ form {
     border: none;
     font-size: 16px;
     width: 150px;
-    box-shadow: rgba(138, 122, 105, 0.49);
+    box-shadow: rgba(138, 122, 105, 0.853);
+    cursor: pointer;
+    padding: 12px 24p 
 }
+
 
 .poem {
     margin-top: 30px;
